# AI-SDLC

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
backend-dev/: SKILL.md
code-review/: SKILL.md
planning/: SKILL.md
skills/architecture-diagram/: SKILL.md
skills/architecture-diagram/assets/: template.html
skills/automate/: SKILL.md
skills/code-commit/: SKILL.md
skills/code-review/: SKILL.md
skills/context-init/: SKILL.md
skills/mentor/: SKILL.md
skills/mentor/templates/: codebase-lesson.md  curriculum.md  lesson.md  project.md  tracker.md
skills/planning/: SKILL.md
skills/project-division/: SKILL.md
skills/qa/: SKILL.md
skills/qa-tester/: SKILL.md
skills/roadmap/: SKILL.md
skills/sdlc-init/: SKILL.md
skills/ship/: SKILL.md
skills/spec/: SKILL.md
src/ai_sdlc/: __init__.py  cli.py
tests/: test_cli.py
understand-codebase/: SKILL.md
